added a button and trying to style it

--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -32,6 +32,10 @@
           ><br />
         </li>
       </ul>
+
+        <center><button class="btn" id="submit">Submit</button></center>
+
+
     </div>
   </body>
 </html>
