got the logic of hamburger menu

--- a/practise-fontawesome/index.html
+++ b/practise-fontawesome/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars" id="nav-toggle"></i>
 
             
             <li class="nav-item"><a href="#">home</a></li>
